--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "sireneapp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/LogoSirene.png", 
+    "icon": "./assets/images/LogoSirene.png",
     "scheme": "sireneapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -14,10 +14,6 @@
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE"
-        // Linhas de imagem comentadas para resolver o erro "Unable to resolve asset"
-        /* "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png" */
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
@@ -31,7 +27,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/LogoSirene.png", 
+          "image": "./assets/images/LogoSirene.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
@@ -39,7 +35,10 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "expo-font",
+      "expo-secure-store",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
